deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: breaking-bad-api-svc
spec:
  selector:
    app: breaking-bad-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
